--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- this will be the title -->
-    <title>Weather App</title>
+    <title>Weather Homework</title>
 </head>
 <body>
     <!-- header  -->  
@@ -43,7 +43,7 @@
             <div class="forecast">
                 <div class="row" >
                     <h1 class="cityName" style = "color: #c7c7c7;">City Name</h1>
-                    <h1 class="currentDate" style = "color: #c7c7c7;"></h1>
+                  ƒ  <h1 class="currentDate" style = "color: #c7c7c7;"></h1>
                     <img class="weatherIcon"></img>
                 </div>
 
